// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Switch /> renders a toggle with an error 1`] = `
<div>
  <Switch
    defaultToggled={false}
    disabled={false}
    labelPosition="left"
    name="Not very awesome toggle"
    onChange={[Function]}
    checked={false}
  />
  <div
    style={
      Object {
        "color": "#f44336",
      }
    }
  >
    Ooops
  </div>
</div>
`;

exports[`<Switch /> renders a checked toggle 1`] = `
<div>
  <Switch
    defaultToggled={false}
    disabled={false}
    labelPosition="left"
    name="Awesome toggle"
    onChange={[Function]}
    checked={true}
  />
</div>
`;
